--- a/sass/components/_slider.scss
+++ b/sass/components/_slider.scss
@@ -31,13 +31,13 @@
     z-index: 10;
   }
 
-  .header {
+  &_header {
     height: 600px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    .title {
+    &_title {
       width: 696px;
       color: $contactLogoColor;
       font-weight: 900;
@@ -49,7 +49,7 @@
       margin: 0;
       padding: 0;
     }
-    .button {
+    &_button {
       width: 200px;
       height: 50px;
       margin: 0;
@@ -64,7 +64,16 @@
       font-size: 16px;
       line-height: 1.87;
       letter-spacing: 0.06em;
+      transition-property: border-radius, background-color, color, box-shadow;
+      transition-duration: 250ms;
+      transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
       cursor: pointer;
+      &:focus {
+        border-radius: 5px;
+        background-color: $accentColor;
+        color: $contactLogoColor;
+        box-shadow: 0px 4px 4px $colorButtonSlider;
+      }
     }
   }
 }
