--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -23,3 +23,11 @@ $boxShadowModal: 0px 1px 3px rgba(0, 0, 0, 0.12),
 $backgroundColorOverlay: rgba(33, 150, 243, 0.9);
 $backgroundWhatAreWeDoingLabel: rgba(47, 48, 58, 0.8);
 $colorWhatAreWeDoingLabel: #fff;
+$backgroundColorBackdrop: rgba(0, 0, 0, 0.2);
+$backgroundColorBackdropModal: #ffffff;
+$borderColorCloseBtnBackdropModal: #0000001a;
+$colorSubscribeNewsletterTitle: #ffffff;
+$backgroundColorSubscribeNewsletterEmail: #2f303a;
+$colorSubscribeNewsletterBorderEmail: rgba(255, 255, 255, 0.3);
+$backgroundColorSubscribeNewsletterButtonSave: #2196f3;
+$colorSubscribeNewsletterButtonSave: #ffffff;
