--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,7 +7,8 @@
 @import "components/portfolio";
 @import "components/footer";
 @import "components/our_clients";
-@import "components/modal";
+// @import "components/modal";
+@import "components/modal1";
 
 body {
   font-family: "Roboto", "Raleway", sans-serif;
