--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,7 @@
 @import "components/our_clients";
 // @import "components/modal";
 @import "components/modal1";
+@import "components/order_form";
 
 body {
   font-family: "Roboto", "Raleway", sans-serif;
