--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -27,6 +27,8 @@ $backgroundColorBackdrop: rgba(0, 0, 0, 0.2);
 $backgroundColorBackdropModal: #ffffff;
 $borderColorCloseBtnBackdropModal: #0000001a;
 $borderColorCloseBtnBackdropModalHover: rgb(241, 241, 248);
+$borderColorLableName: #757575;
+$borderColorLableBorderName: rgba(33, 33, 33, 0.2);
 $colorSubscribeNewsletterTitle: #ffffff;
 $backgroundColorSubscribeNewsletterEmail: #2f303a;
 $colorSubscribeNewsletterBorderEmail: rgba(255, 255, 255, 0.3);
