--- a/css/main.css
+++ b/css/main.css
@@ -678,13 +678,14 @@
   left: 50%;
   transform: translate(-50%, -50%);
   width: 528px;
-  min-height: 518px;
+  min-height: 581px;
   border-radius: 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   background-color: #ffffff;
 }
 .backdrop-modal-close-btn {
   position: absolute;
+  margin: 0;
   top: 8px;
   right: 8px;
   width: 30px;
@@ -754,6 +755,100 @@
     transform: translateX(1500px) scale(0.75);
   }
 }
+.backdrop-modal-order {
+  position: relative;
+  top: 75px;
+  left: 40px;
+  border: 1px solid green;
+  width: 448px;
+  height: 342px;
+  display: flex;
+  flex-direction: column;
+}
+.backdrop-modal-order p {
+  font-size: 12px;
+  line-height: 1.17;
+  color: #757575;
+}
+.backdrop-modal-order-lable1 {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 58px;
+}
+.backdrop-modal-order-lable1 svg {
+  position: absolute;
+  left: 12px;
+  top: 23px;
+}
+.backdrop-modal-order-lable1-name {
+  width: 100%;
+  height: 40px;
+  margin-bottom: 10px;
+  padding-left: 42px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+.backdrop-modal-order-lable2 {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 58px;
+}
+.backdrop-modal-order-lable2 svg {
+  position: absolute;
+  left: 12px;
+  top: 27px;
+  z-index: 20;
+}
+.backdrop-modal-order-lable2 svg:hover, .backdrop-modal-order-lable2 svg:focus {
+  fill: #2196f3;
+}
+.backdrop-modal-order-lable2-phone {
+  position: absolute;
+  width: 100%;
+  height: 40px;
+  left: 0;
+  top: 16px;
+  margin-bottom: 10px;
+  padding-left: 42px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+.backdrop-modal-order-lable3 {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 58px;
+}
+.backdrop-modal-order-lable3 svg {
+  position: absolute;
+  left: 12px;
+  top: 23px;
+}
+.backdrop-modal-order-lable3-email {
+  width: 100%;
+  height: 40px;
+  margin-bottom: 10px;
+  padding-left: 42px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+.backdrop-modal-order-lable4-comment {
+  width: 100%;
+  height: 120px;
+  padding-top: 11px;
+  padding-left: 12px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  font-size: 12px;
+  line-height: 1.17;
+  color: #757575;
+}
+
 body {
   font-family: "Roboto", "Raleway", sans-serif;
   color: #212121;
