--- a/sass/components/_modal2.scss
+++ b/sass/components/_modal2.scss
@@ -32,11 +32,18 @@
       border-radius: 50%;
       background-color: $backgroundColorBackdropModal;
       border: 1px solid $borderColorCloseBtnBackdropModal;
+      transition-property: background-color, fill, cursor;
+      transition-duration: 250ms;
+      transition-timing-function: cubick-bezier(0.4, 0, 0.2, 1);
       cursor: pointer;
-      
+      &-icon {
+        margin: 5px 5px 5px 5px;
+      }
+
       &:hover,
       &:focus {
         background-color: $borderColorCloseBtnBackdropModalHover;
+        fill: white;
       }
     }
   }
