--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,8 +8,9 @@
 @import "components/footer";
 @import "components/our_clients";
 // @import "components/modal";
-@import "components/modal1";
-@import "components/order_form";
+// @import "components/modal1";
+@import "components/modal2";
+@import "components/order";
 
 body {
   font-family: "Roboto", "Raleway", sans-serif;
