--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -26,9 +26,10 @@ $colorWhatAreWeDoingLabel: #fff;
 $backgroundColorBackdrop: rgba(0, 0, 0, 0.2);
 $backgroundColorBackdropModal: #ffffff;
 $borderColorCloseBtnBackdropModal: #0000001a;
-$borderColorCloseBtnBackdropModalHover: rgb(241, 241, 248);
-$borderColorLableName: #757575;
-$borderColorLableBorderName: rgba(33, 33, 33, 0.2);
+$borderColorCloseBtnBackdropModalHover: #2196f3;
+$borderColorLableText: #757575;
+$colorFormLableTextarea: rgba(117, 117, 117, 0.5);
+$borderColorLableBorderText: rgba(33, 33, 33, 0.2);
 $colorSubscribeNewsletterTitle: #ffffff;
 $backgroundColorSubscribeNewsletterEmail: #2f303a;
 $colorSubscribeNewsletterBorderEmail: rgba(255, 255, 255, 0.3);
