--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -114,63 +114,68 @@
       text-transform: uppercase;
       color: $colorSubscribeNewsletterTitle;
     }
-    &-label {
-      display: inline-flex;
-      gap: 14px;
+    &-form {
+      &-box {
+        display: flex;
 
-      &-email {
-        width: 358px;
-        height: 50px;
-        font-size: 16px;
-        line-height: 1.25;
-        letter-spacing: 0.03em;
-        background-color: $backgroundColorSubscribeNewsletterEmail;
-        border: 1px solid $colorSubscribeNewsletterBorderEmail;
-        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-        border-radius: 4px;
-        padding-left: 16px;
-        transition-property: background-color, border, filter, border-radius;
-        transition-duration: 250ms;
-        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-        &:focus {
+        &-email {
+          width: 358px;
+          height: 50px;
+          font-size: 16px;
+          line-height: 1.25;
+          letter-spacing: 0.03em;
           background-color: $backgroundColorSubscribeNewsletterEmail;
           border: 1px solid $colorSubscribeNewsletterBorderEmail;
           filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-          border-radius: 5px;
+          border-radius: 4px;
+          padding-left: 16px;
+          margin-right: 12px;
+          transition-property: background-color, border, filter, border-radius;
+          transition-duration: 250ms;
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          &:focus {
+            background-color: $backgroundColorSubscribeNewsletterEmail;
+            border: 1px solid $colorSubscribeNewsletterBorderEmail;
+            filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+            border-radius: 5px;
+          }
         }
-      }
-      &-save {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        width: 200px;
-        height: 50px;
-        background-color: $backgroundColorSubscribeNewsletterButtonSave;
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-        border-radius: 4px;
-        border: none;
-        color: $colorSubscribeNewsletterButtonSave;
-        font-weight: 700;
-        font-size: 16px;
-        line-height: 1.88;
-        letter-spacing: 0.06em;
-        cursor: pointer;
-        transition-property: border-radius, background-color, fill, color,
-          box-shadow;
-        transition-duration: 250ms;
-        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-        svg {
-          margin-left: 24px;
-          fill: $colorSubscribeNewsletterButtonSave;
-        }
-
-        &:focus {
-          border-radius: 5px;
+        &-save {
+          position: relative;
+          display: flex;
+          text-align: center;
+          align-items: center;
+          padding-left: 42px;
+          width: 200px;
+          height: 50px;
           background-color: $backgroundColorSubscribeNewsletterButtonSave;
           color: $colorSubscribeNewsletterButtonSave;
-          fill: $colorSubscribeNewsletterButtonSave;
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+          border-radius: 4px;
+          border: none;
+          font-weight: 700;
+          font-size: 16px;
+          line-height: 1.88;
+          letter-spacing: 0.06em;
+          cursor: pointer;
+          transition-property: border-radius, background-color, fill, color,
+            box-shadow;
+          transition-duration: 250ms;
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          .newsletter-icon {
+            position: absolute;
+            left: 148px;
+            top: 13px;
+            fill: $colorSubscribeNewsletterButtonSave;
+          }
+          &:focus,
+          &:hover {
+            border-radius: 5px;
+            background-color: $backgroundColorSubscribeNewsletterButtonSaveHover;
+            color: $colorSubscribeNewsletterButtonSaveHover;
+            fill: $colorSubscribeNewsletterButtonSaveHover;
+            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+          }
         }
       }
     }
