--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -34,6 +34,6 @@ $colorSubscribeNewsletterTitle: #ffffff;
 $backgroundColorSubscribeNewsletterEmail: #2f303a;
 $colorSubscribeNewsletterBorderEmail: rgba(255, 255, 255, 0.3);
 $backgroundColorSubscribeNewsletterButtonSave: #2196f3;
-$backgroundColorSubscribeNewsletterButtonSaveHover: #1891f3;
+$backgroundColorSubscribeNewsletterButtonSaveHover: #0d83e4;
 $colorSubscribeNewsletterButtonSave: #ffffff;
 $colorSubscribeNewsletterButtonSaveHover: #f3ebeb;
