--- a/css/main.css
+++ b/css/main.css
@@ -619,13 +619,16 @@
   left: 148px;
   top: 13px;
   fill: #ffffff;
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer .subscribe-to-the-newsletter-form-box-save:focus, .footer .subscribe-to-the-newsletter-form-box-save:hover {
   border-radius: 5px;
-  background-color: #1891f3;
+  background-color: #0d83e4;
   color: #f3ebeb;
   fill: #f3ebeb;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.15);
 }
 
 .our_clients {
