--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -167,14 +167,18 @@
             left: 148px;
             top: 13px;
             fill: $colorSubscribeNewsletterButtonSave;
+            transition-property: fill;
+            transition-duration: 250ms;
+            transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           }
+
           &:focus,
           &:hover {
             border-radius: 5px;
             background-color: $backgroundColorSubscribeNewsletterButtonSaveHover;
             color: $colorSubscribeNewsletterButtonSaveHover;
             fill: $colorSubscribeNewsletterButtonSaveHover;
-            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+            box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.15);
           }
         }
       }
